docs: add search query parameter descriptions to swagger docs
